/trips?[dropoff|pickup]=1; Passengers in trips
